# codebook-rust

./: Cargo.toml  README.md
src/: codebook.rs  codeword.rs  evaluation.rs  lib.rs  main.rs  video_processor.rs
