[package]
name = "codebook-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
opencv = { version = "0.96", features = ["clang-runtime"] }
nalgebra = "0.34.1"
rayon = "1.11"  
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"

[lib]
name = "codebook_model"
path = "src/lib.rs"
